<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res/com.zgrannan.crewandroid"

	android:orientation="vertical" android:padding="10dip"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:id="@+id/standard_interface" android:nextFocusDown="@+id/build_button">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView android:text="@string/frame_text" android:id="@+id/frame_textView" android:layout_width="112dp" android:textSize="14dp"
			android:layout_height="wrap_content" android:layout_gravity="center"/>
		<Spinner android:id="@+id/frame_spinner" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:prompt="@string/frame_text"
			android:scrollbarAlwaysDrawVerticalTrack="true" />
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="horizontal" >
		<TextView android:text="@string/lid_text" android:id="@+id/lid_textView"
			android:layout_height="wrap_content" android:layout_width="112dp" android:textSize="14dp"/>
		<Spinner android:id="@+id/lid_spinner" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:prompt="@string/lid_text"
			android:scrollbarAlwaysDrawVerticalTrack="true" />
	</LinearLayout>
	<com.zgrannan.crewandroid.DimensionButton
		custom:prefix="@string/length" custom:prompt="@string/set_length"
		custom:requestCode="@integer/length" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/length_button">
	</com.zgrannan.crewandroid.DimensionButton>
	<com.zgrannan.crewandroid.DimensionButton
		custom:prefix="@string/width" custom:prompt="@string/set_width"
		custom:requestCode="@integer/width" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/width_button">
	</com.zgrannan.crewandroid.DimensionButton>
</LinearLayout>
		