<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

	android:orientation="vertical" android:padding="10dip"
	android:layout_width="fill_parent" android:layout_height="wrap_content">


	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<TextView android:text="@string/diagram_text" android:id="@+id/instruction_textview"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textSize="20dp" android:textColor="#FFFFFF"
			android:layout_gravity="center_horizontal|top" android:background="@drawable/rounded_rectangle" android:padding="10px"></TextView>
		<com.zgrannan.crewandroid.CustomDrawableView
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:id="@+id/diagram">

		</com.zgrannan.crewandroid.CustomDrawableView>
	</LinearLayout>
	<Button android:text="@string/previous_step" android:id="@+id/previous_button"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="left|bottom" android:visibility="invisible"></Button>
	<Button android:text="@string/go_back" android:id="@+id/goback_button"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|bottom"></Button>
	<Button android:text="@string/next_step" android:id="@+id/next_button"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="right|bottom"></Button>

</FrameLayout>