<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
    
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent">
   	 	<TextView android:text="@string/name_edit" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
        <EditText android:id="@+id/name_edit" android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="match_parent"></EditText>
        
    </LinearLayout>
     <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent">
    	<Button android:text="@string/save" android:layout_height="wrap_content" android:id="@+id/save_button" android:layout_width="wrap_content"></Button>
    	<Button android:text="@string/cancel" android:layout_height="wrap_content" android:id="@+id/cancel_button" android:layout_width="wrap_content"></Button>
    </LinearLayout>
</LinearLayout>
