<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  <TextView android:id="@+id/prompt_text" android:text="@string/dimension_edit_prompt" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginBottom="25dp" android:textSize="24dp" android:textColor="#FFFFFF"></TextView>
  <include android:id="@+id/dimensioneditor" layout = "@layout/dimension_edit" android:layout_height="wrap_content" android:layout_width="wrap_content"></include>
  <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginTop="50dp" android:layout_marginLeft="25dp">
  	<Button android:id="@+id/confirm_button" android:text="@string/ok" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
  	<Button android:id="@+id/cancel_button" android:text="@string/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content"> </Button>
  	
  </LinearLayout>
</LinearLayout>
